--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@
 .sidebar-link:focus .sidebar-label {
   color: #FF4747 !important;
 }
+
+body {
+  padding: 0;
+  margin: 0;
+}
 /*:root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
